--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'kamel.berlime.com'
 languageCode = 'en-us'
-title = 'Alter Ego Edited'
+title = 'Alter Ego Edited 2'
 theme = 'gokarna'
 
 # Automatically generate robots.txt
