--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'kamel.berlime.com'
+baseURL = 'px2is0.satemporary.click'
 languageCode = 'en-us'
 title = 'Alter Ego Edited 2'
 theme = 'gokarna'
