--- a/hugo.toml
+++ b/hugo.toml
@@ -79,7 +79,7 @@ enableRobotsTXT = true
  dateFormat = "2 January, 2006"
 
   # Keywords relevant for SEO
-  metaKeywords = ["blog", "gokarna", "hugo"]
+  metaKeywords = ["blog", "gokarna", "hugo", "dev"]
 
   # If you want to display posts on the homepage, the options are
   # "popular" (order posts by weight), "recent" (order posts by date)
