--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/gokarna"]
-	path = themes/gokarna
+[submodule "gokarna/public"]
+	path = gokarna/public
 	url = https://github.com/gokarna-theme/gokarna-hugo
