--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "gokarna/public"]
-	path = gokarna/public
+[submodule "themes/gokarna"]
+	path = themes/gokarna
 	url = https://github.com/gokarna-theme/gokarna-hugo
