--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
-[submodule "public"]
+[submodule "themes/gokarna"]
 	path = themes/gokarna
 	url = https://github.com/gokarna-theme/gokarna-hugo
+
+[submodule "public"]
+	path = public
+	url = https://github.com/Berlime/gokarna
+
