--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,7 @@
+[submodule "themes/gokarna"]
+	path = themes/gokarna
+	url = https://github.com/gokarna-theme/gokarna-hugo
+
 [submodule "public"]
 	path = public
 	url = https://github.com/Berlime/gokarna
-
